* Use UNION for 'Or'-ed domain with subqueries
* Use global cache for Function fields in readonly transactions
* Add option to strip leading and trailing whitespace from fields.Char

Version 6.0.2 - 2021-05-15
* Allow column sql types to be tested from the table handler
* Combine search and get_keys in DictSchemaMixin
* Reset less often the user sessions
* Protect trusted devices against brute force attack
* Eager load Function field with same multiple getter

Version 5.6.3 - 2020-07-01
* Bug fixes (see mercurial logs for details)

Version 6.0.1 - 2021-05-07
* Bug fixes (see mercurial logs for details)

Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Allow column sql types to be tested from the table handler
* Add support for database connection parameters to configuration URI
* Use immutable datastructures for Dict and MultiSelection fields
* Skip warnings for non-interactive operations
* Check rule only if _check_access is set
* Add statistics to Cache
* Add support for avatars
* Add status command
* Add document widget on form view
* Add full text and similarity search and FullText field
* Add URL type to icon
* Use instance method to get next sequence value
* Store the sequence type directly on sequence
* Allow sending email with record's attachments
* Add which records to use for actions
* Add parent to group to inherit accesses
* Add __access__ to Model
* Add route wrapper to allow null origin
* Add header grouping on report
* Protect trusted devices against brute force attack
* Make ModelView.parse_view public
* Add help for each value to selection and multiselection
* Use safe_join in SharedDataMiddlewareIndex (issue10068)
* Use menu name for window opened from menu
* Add trigonometric functions to sqlite backend
* Allow skipping user warnings globally
* Add validate option to trytond-admin
* Refresh pool of other processes
* Add clear_all method to Cache
* Support Genshi element directives in HTML editor
* Add firstline tool